Add initial button with sample circle

--- a/d3/join/index.html
+++ b/d3/join/index.html
@@ -4,6 +4,8 @@
     <title>My Third D3 Page!</title>
   </head>
   <body>
+    <button onclick="app.render()">Add circles!</button>
+    <svg id="join-demo"></svg>
 
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
