Link to tutorial

--- a/jquery/about-jquery/index.html
+++ b/jquery/about-jquery/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+<!-- About jQuery: http://learn.jquery.com/about-jquery/ -->
 <head>
   <meta charset="utf-8">
   <title>My first jQuery page</title>
