--- a/jquery/about-jquery/index.html
+++ b/jquery/about-jquery/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
   <a href="http://jquery.com/">jQuery!</a>
-  <script src="jquery.js"></script>
-  <script>
-    // Code goes here
-  </script>
+  <script src="/bower_components/jquery/dist/jquery.js"></script>
+  <script src="/app.js"></script>
 </body>
 </html>
