Add empty stylesheet

--- a/jquery/about-jquery/index.html
+++ b/jquery/about-jquery/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>My first jQuery page</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
   <a href="http://jquery.com/">jQuery!</a>
